fixed public folder links

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,28 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Four Guys Mechanics</title>
         
-        <link rel="stylesheet" href="./public/style.css">
-        <link rel="stylesheet" href="./public/jass.css">
+        <link rel="stylesheet" href="../.././public/style.css">
+        <link rel="stylesheet" href="../.././public/jass.css">
     </head>
     <body>
-        <h1>Five Guys Mechanics</h1>
-        {{{ body }}}
-        <!-- Javascript links -->
+        <!-- header -->
+    <div>
+        <h1>Four Guys Mechanics</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a>My Appointments</a>
+                </li>
+                <li>
+                    <a>My Cars</a>
+                </li>
+                <li>
+                    <a>Credits</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    {{{ body }}}
+    <!-- Javascript links -->
     </body>
 </html>
