--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,8 @@
         
         <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./jass.css">
+        <link rel="stylesheet" href="./login.css">
+        <link rel="stylesheet" href="./about.css">
     </head>
     <body>
         <!-- header -->
