rm withAuth from index.js

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 
-<header class = "header">Four Guys Meachanic Shop</header>
+<header class = "header">Four Guys Mechanic Shop</header>
 <section class="about">
     <p>
         We provide high quality, convenient and comprehensive auto repair at low cost. It is the goal of our firm to have 100% customer satisfaction in regards to quality, friendliness, time to completion and to discover new ways to exceed the expectations of our clients.
