making changes to the routes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,6 +44,8 @@
         </form>
     </div>
 </div>
+
+<script src="./js/login.js"></script>
 <!-- <section class ="image is-5by4">
         <img
         src="./assets/image/Car img.jpg"
