--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -67,5 +67,5 @@
         <p>Project Partners: Bossman Samuel Quansah, Brandon Cheung, David Dwight, Chris McHenry</p>
     </footer>
 
-
+<script src="./js/profile.js"></script>
 
