added css to handlerbars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
 <div class="columns">
     <div class="column ">
         <h2 >Login</h2>
-        <form class="form login-form">
+        <form class =>
             <div class="buttons">
                 <label for="email-login">email:</label>
                 <input type="text" id="email-login" />
@@ -25,7 +25,7 @@
     </div>
     <div class = "column ">
         <h2 >Signup</h2>
-        <form class="form signup-form">
+        <form>
             <div class=" buttons">
                 <label for="name-signup">name:</label>
                 <input type="text" id="name-signup" />
@@ -44,11 +44,3 @@
         </form>
     </div>
 </div>
-
-<script src="./js/login.js"></script>
-<!-- <section class ="image is-5by4">
-        <img
-        src="./assets/image/Car img.jpg"
-        alt="Mechanics shop"
-        />
-</section> -->
