added columns to about handlebars

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -3,7 +3,7 @@
     <!-- body -->
     <div class="container">
         <!-- Timeblocks go here -->
-        <section class="time-block row">
+        <section class="time-block column">
 
             <label for="hour1" class="hour">9AM</label>
             <div class="field" id="hour1">
@@ -20,7 +20,7 @@
             </div>
             <button class="saveBtn" id="save-btn1">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour2" class="hour">10AM</label>
             <div id="hour2">
                 <p>{clientName}</p>
@@ -36,7 +36,7 @@
             </div>
             <button class="saveBtn" id="save-btn2">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour3" class="hour">11AM</label>
             <div id="hour3">
                 <p>{clientName}</p>
@@ -52,7 +52,7 @@
             </div>
             <button class="saveBtn" id="save-btn3">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour4" class="hour">12PM</label>
             <div id="hour4">
                 <p>{clientName}</p>
@@ -68,7 +68,7 @@
             </div>
             <button class="saveBtn" id="save-btn4">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour5" class="hour">1PM</label>
             <div id="hour5">
                 <p>{clientName}</p>
@@ -84,7 +84,7 @@
             </div>
             <button class="saveBtn" id="save-btn5">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour6" class="hour">2PM</label>
             <div id="hour6">
                 <p>{clientName}</p>
@@ -100,7 +100,7 @@
             </div>
             <button class="saveBtn" id="save-btn6">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour7" class="hour">3PM</label>
             <div id="hour7">
                 <p>{clientName}</p>
@@ -116,7 +116,7 @@
             </div>
             <button class="saveBtn" id="save-btn7">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour8" class="hour">4PM</label>
             <div id="hour8">
                 <p>{clientName}</p>
@@ -132,7 +132,7 @@
             </div>
             <button class="saveBtn" id="save-btn8">Delete</button>
         </section>
-        <section class="time-block row">
+        <section class="time-block column">
             <label for="hour9" class="hour">5PM</label>
             <div id="hour9">
                 <p>{clientName}</p>
