--- a/views/appointments.handlebars
+++ b/views/appointments.handlebars
@@ -1,32 +1,44 @@
 
     <!-- body -->
     
-    <aside>
-        <div>
-            <h2>Work Order History</h2>
+    <div class = "main">
+    <!-- body -->
+        <div class="columns">
+            <div class = "column">
+                <aside class="menu">
+                    <div class = "div-header">
+                        <h2>Work Order History</h2>
+                    </div>
+                    <ul>
+                        {{#each appointments as |appointment|}}
+                        <li>
+                            <p>{{appointment.name}}</p>
+                        </li>
+                        {{/each}}
+                        
+                    </ul>
+                </aside>
+            </div>
+            <div class = "column">
+                <div class = "car">
+                    <h1>{carMake} {carModel} {carYear} {carColor}</h1>
+                </div>
+                <div class = "container">
+
+                    <h2>Make An Appointment</h2>
+                    <h3>Please provide the contact information for the person responsible for dropoff/pickup</h3>
+
+                    <form>
+                        <input type="text" placeholder="Name"  id="contact-name-fld">
+                        <input type="tel" placeholder="Phone number"  id="contact-tel-fld">
+                        <input type="text" placeholder="Service Needed"  id="service-fld">
+                        <input type="datetime-local" placeholder="Time Slot"  id="time-slot-fld">
+                        <input type="text" placeholder="Plate" id="lisence-plate-fld">
+                    </form>
+                </div>
+            </div>
         </div>
-        <ul>
-            {{#each appointments as |appointment|}}
-            <li>
-                <p>{{appointment.name}}</p>
-            </li>
-            {{/each}}
-            
-        </ul>
-    </aside>
-
-    <h1>{carMake} {carModel} {carYear} {carColor}</h1>
-
-    <h2>Make An Appointment</h2>
-    <h3>Please provide the contact information for the person responsible for dropoff/pickup</h3>
-
-    <form>
-        <input type="text" placeholder="Name"  id="contact-name-fld">
-        <input type="tel" placeholder="Phone number"  id="contact-tel-fld">
-        <input type="text" placeholder="Service Needed"  id="service-fld">
-        <input type="datetime-local" placeholder="Time Slot"  id="time-slot-fld">
-        <input type="text" placeholder="Plate" id="lisence-plate-fld">
-    </form>
+    </div>
     <!-- footer -->
     <footer>
         <p>Project Partners: Bossman Samuel Quansah, Brandon Cheung, David Dwight, Chris McHenry</p>
