--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./jass.css">
         <link rel="stylesheet" href="./login.css">
         <link rel="stylesheet" href="./about.css">
+        <link rel="stylesheet" href="./appointments.css">
          <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     </head>
     <body>
